objects/Milestone_Exception__c.object
<CustomObject>
    <fields>
        <fullName>Case_Milestone_ID__c</fullName>
        <label>Case Milestone ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Milestone Exceptions</relationshipLabel>
        <relationshipName>Milestone_Exceptions</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Milestone__c</fullName>
        <label>Milestone</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Start_Date__c</fullName>
        <label>Original Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Original_Target_Date__c</fullName>
        <label>Original Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proposed_Start_Date__c</fullName>
        <formula>Original_Start_Date__c + (Proposed_Target_Date__c-Original_Target_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Proposed_Target_Date__c</fullName>
        <label>Proposed Target Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Product Quality/Delivery</fullName>
                </value>
                <value>
                    <fullName>PS Delivery</fullName>
                </value>
                <value>
                    <fullName>3rd Party Issue</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Milestone Exception</label>
    <nameField>
        <displayFormat>ME-{00000}</displayFormat>
        <label>Milestone Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Milestone Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Required_field</fullName>
        <active>true</active>
        <description>validation field instead of required field so tests can pass</description>
        <errorConditionFormula>ISBLANK(Milestone__c)
&amp;&amp;
$Profile.Name &lt;&gt; &quot;System Administrator&quot;</errorConditionFormula>
        <errorDisplayField>Milestone__c</errorDisplayField>
        <errorMessage>Required field</errorMessage>
    </validationRules>
</CustomObject>